--- a/client/src/pages/Users.module.scss
+++ b/client/src/pages/Users.module.scss
@@ -19,6 +19,11 @@
     width: auto;
 } */
 
+.myImg {
+    width: auto;
+    height: 10em;
+}
+
 .avatarOverlay {
     transition: .5s ease;
     opacity: 0;
